# cmake_sample_deps

./: CMakeLists.txt  README.md
cmake/: FindLuajit.cmake
cmake.deps/: CMakeLists.txt
cmake.deps/cmake/: BuildFreeglut.cmake  BuildLuajit.cmake
